--- a/src/style/pages/main.css
+++ b/src/style/pages/main.css
@@ -683,8 +683,6 @@ section.traffic_patrol:before {
     transition: top 4s ease, right 4s ease, bottom 4s ease, left 4s ease; /* Добавляем анимацию перемещения через свойства top и right */
 }
 
-
-
 section.traffic_patrol .traffic_patrol_grid-wrapper {
     display: grid;
     grid-template-columns: repeat(5, 1fr);
@@ -735,12 +733,16 @@ section.traffic_patrol .traffic_patrol_grid-wrapper .traffic_patrol-slide-kamaz 
 section.traffic_patrol .traffic_patrol_grid-wrapper .traffic_patrol-slide-kamaz_NOSLIDER {
     grid-area: traffic_patrol-slide-kamaz_NOSLIDER;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: 1fr;
+    /* grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: 1fr; */
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(2, 1fr);
     gap: 20px;
     grid-auto-flow: row;
     grid-template-areas:
-      "model_1 model_2 model_3";
+      /* "model_1 model_2 model_3"; */
+      ". model_1 model_1 model_2 model_2"
+      ". model_3 model_3 model_4 model_4";
 }
 
 section.traffic_patrol .traffic_patrol_grid-wrapper .traffic_patrol-slide-kamaz_NOSLIDER .model_1 {
@@ -755,12 +757,16 @@ section.traffic_patrol .traffic_patrol_grid-wrapper .traffic_patrol-slide-kamaz_
     grid-area: model_3;
 }
 
+section.traffic_patrol .traffic_patrol_grid-wrapper .traffic_patrol-slide-kamaz_NOSLIDER .model_4 {
+    grid-area: model_4;
+}
+
 section.traffic_patrol .traffic_patrol_grid-wrapper .traffic_patrol-slide-kamaz .traffic_patrol-slider-buttons {
     position: absolute;
     top: -60px;
     right: 0;
-    display: none;
-    /* display: flex; */
+    /* display: none; */
+    display: flex;
     justify-content: flex-start;
     align-items: center;
     gap: 10px;
